--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ header{
 main{
     padding: 50px 0;
 }
+
+footer{
+    background-color:#111;
+    min-height: 70px;
+}
 /*utilities*/
 .container{
     max-width: 1200px;
@@ -129,7 +134,7 @@ main{
 }
 
 /*main*/
-.row{
+.row-main{
     gap: 20px;
     width: 100%;
 }
@@ -204,6 +209,44 @@ main{
     height: 30px;
     border-color: transparent;
 }
+/*footer*/
+.row-ftr{
+    justify-content: space-between;
+}
 
+.row-ftr *{
+    color: #fff;
+}
 
+.ftr-row-a-left a{
+    text-decoration: none;
+}
+
+.ftr-left-side{
+    width: 375px;
+    height: 75px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.ftr-row-a-left{
+    margin-top: 5px;
+    justify-content: space-evenly;
+    gap: 10px;
+}
+
+.ftr-right-side{
+    width: 150px;
+    height: 75px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.ftr-row-a-right{
+    margin-top: 5px;
+    justify-content: space-evenly;
+    gap: 5px;
+}
 
