--- a/style.css
+++ b/style.css
@@ -224,24 +224,24 @@ footer{
 
 .ftr-left-side{
     width: 375px;
+    align-items: flex-start;
+}
+
+.ftr-right-side{
+    width: 150px;
+    align-items: center;
+}
+
+.ftr-left-side, .ftr-right-side{
     height: 75px;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
 }
 
 .ftr-row-a-left{
     margin-top: 5px;
     justify-content: space-evenly;
     gap: 10px;
-}
-
-.ftr-right-side{
-    width: 150px;
-    height: 75px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .ftr-row-a-right{
